; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/picomodel/lwo/extr_lwio.c_sgetI2.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/picomodel/lwo/extr_lwio.c_sgetI2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flen = common dso_local global i64 0, align 8
@FLEN_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i16 @sgetI2(i8** %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca i8**, align 8
  %4 = alloca i16, align 2
  store i8** %0, i8*** %3, align 8
  %5 = load i64, i64* @flen, align 8
  %6 = load i64, i64* @FLEN_ERROR, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i16 0, i16* %2, align 2
  br label %20

9:                                                ; preds = %1
  %10 = load i8**, i8*** %3, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @memcpy(i16* %4, i8* %11, i32 2)
  %13 = call i32 @revbytes(i16* %4, i32 2, i32 1)
  %14 = load i64, i64* @flen, align 8
  %15 = add nsw i64 %14, 2
  store i64 %15, i64* @flen, align 8
  %16 = load i8**, i8*** %3, align 8
  %17 = load i8*, i8** %16, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 2
  store i8* %18, i8** %16, align 8
  %19 = load i16, i16* %4, align 2
  store i16 %19, i16* %2, align 2
  br label %20

20:                                               ; preds = %9, %8
  %21 = load i16, i16* %2, align 2
  ret i16 %21
}

declare dso_local i32 @memcpy(i16*, i8*, i32) #1

declare dso_local i32 @revbytes(i16*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
